--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,46 +1,26 @@
+
+
 body {
 	font-family: 'Sintony', sans-serif;
+	padding-top: 70px;
 }
 
-ul.header-menu {
-	margin: 120px 0 0 0;
-	float: right;
+/* .Container
+===========================*/
+.container {
+	max-width: 1000px;
+}
+/* .jumbotron
+===========================*/
+.jumbotron {
+	text-align: center;
 }
 
-ul.header-menu li {
-	float: left;
-	margin-right: 40px;
-	list-style: none;
-	padding: 5px;
-	border: 1px solid;
-	background: lightblue;
+/* .glyphicons
+===========================*/
+.glyphicon {
+	font-size: 3em;
+	display: block;
+	text-align: center;
+	color: #48b8e8;
 }
-
-ul.header-menu li:hover{
-	float: left;
-	text-decoration: underline;
-	margin-right: 40px;
-	list-style: none;
-	padding: 5px;
-	border: 2px solid;
-	background: lightblue;
-	box-shadow: 0 0 2px blue;
-
-}
-ul.header-menu li a {
-	color: #steelblue;
-	text-decoration: none;
-}
-
-#container {
-	background-color: lightgrey;
-	color:steelblue;
-	width: auto;
-	margin: 40px 40px;
-	padding: 30px 100px;
-	font-size: 1.5em;
-	 border: 1px solid;
-
-}
-
-
